# local-mind

./: README.md  demo_chat.txt  package-lock.json
core/: Cargo.toml
core/src/: database.rs  lib.rs
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx  worker.ts
web/components/: ChatFilter.tsx  FileUploader.tsx  ModelLoading.tsx  SearchResults.tsx  UploadProgress.tsx
web/hooks/: useWorker.ts
web/utils/: parsers.ts
