[package]
name = "local-mind-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
candle-core = { version = "0.8.2" }
candle-nn = { version = "0.8.2" }
candle-transformers = { version = "0.8.2" }
tokenizers = { version = "0.22", default-features = false, features = [
  "fancy-regex",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
anyhow = "1.0"
text-splitter = { version = "0.28.0", default-features = false, features = [
  "markdown",
] }
regex = "1.12.2"
